--- a/.github/workflows/reusable-workflow.yml
+++ b/.github/workflows/reusable-workflow.yml
@@ -1,8 +1,8 @@
 name: Reusable Workflow
 
 on:
-  workflow_dispatch:
-    inputs:
+  workflow_call:
+   inputs:
       node:
         required: true
         type: string
